	PR ld/2218 	* elf64-ppc.c (allocate_dynrelocs): Ensure undef weak sym is 	dynamic. 	(ppc64_elf_relocate_section): Check output reloc section size. 	* elf32-ppc.c (allocate_dynrelocs): Simplify undef weak test.